Improve LAB03-LAB05 documentation with complete workshop steps